# trading-master

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  __init__.py  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cli/: entry.py
config/: __init__.py  default.yaml  settings.py
crowdwisdom_quant/data/database/: manager.py  schema.py
crowdwisdom_quant/database/: db.py
crowdwisdom_quant/features/: engineering.py
crowdwisdom_quant/models/: metrics.py
crowdwisdom_quant/preprocessing/: clean_trades.py  merge_data.py
crowdwisdom_quant/scraper/: __init__.py
crowdwisdom_quant/tests/: test_cli_utils.py  test_features.py  test_metrics.py  test_model_registry.py  test_predictor.py  test_reporting.py
crowdwisdom_quant/utils/: cli_utils.py  file_io.py  logging_setup.py
data/preprocessing/: trades.py
database/: __init__.py  schema.py
docs/: architecture.md
features/: feature_engineering.py
models/: predictor.py  registry.py  trainer.py  walk_forward.py
models/registry/: registry.json
preprocessing/: clean_events.py
reporting/: evaluation.py
scraper/: macro_scraper.py
tests/: test_cleaning.py  test_cli.py  test_config.py  test_database.py  test_exceptions.py  test_retry.py  test_scraper.py  test_visualization.py  test_walkforward.py
utils/: exceptions.py  reproducibility.py  retry.py
visualization/: equity_curve.py  heatmap.py
(+5 files in other folders)
