[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crowdwisdom_quant"
version = "1.1.0"
description = "Quantitative trading research platform — macro-driven ML pipeline"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
include = ["crowdwisdom_quant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::FutureWarning", "ignore::DeprecationWarning"]
